[gd_scene load_steps=2 format=3 uid="uid://ckvgin2rnbog3"]

[ext_resource type="Script" path="res://sources/interfaces/StartMenu.gd" id="1_8tn4c"]

[node name="Start Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_8tn4c")

[node name="title" type="Label" parent="."]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 100
text = "TEXT_STARTMENU_TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="buttons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 250.0
offset_right = 1100.0
offset_bottom = 550.0

[node name="sub" type="VBoxContainer" parent="buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="mods" type="Button" parent="buttons/sub"]
layout_mode = 2
size_flags_vertical = 3
text = "TEXT_STARTMENU_MODS"

[node name="test" type="Button" parent="buttons/sub"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "TEXT_STARTMENU_TEST"

[node name="main" type="VBoxContainer" parent="buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="start" type="Button" parent="buttons/main"]
layout_mode = 2
size_flags_vertical = 3
text = "TEXT_STARTMENU_START"

[node name="settings" type="Button" parent="buttons/main"]
layout_mode = 2
size_flags_vertical = 3
text = "TEXT_STARTMENU_SETTINGS"

[node name="exit" type="Button" parent="buttons/main"]
layout_mode = 2
size_flags_vertical = 3
text = "TEXT_STARTMENU_EXIT"

[node name="others" type="VBoxContainer" parent="buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="more" type="Button" parent="buttons/others"]
layout_mode = 2
size_flags_vertical = 3
text = "TEXT_STARTMENU_MORE"

[node name="about" type="Button" parent="buttons/others"]
layout_mode = 2
size_flags_vertical = 3
text = "TEXT_STARTMENU_ABOUT"

[connection signal="pressed" from="buttons/sub/mods" to="." method="_on_mods_pressed"]
[connection signal="pressed" from="buttons/sub/test" to="." method="_on_test_pressed"]
[connection signal="pressed" from="buttons/main/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="buttons/main/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="buttons/main/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="buttons/others/more" to="." method="_on_more_pressed"]
[connection signal="pressed" from="buttons/others/about" to="." method="_on_about_pressed"]
